# Marketing-Services

./: CMakeLists.txt
src/: headers.h  main.cpp
src/classes/: CreatePostersService.h  MainMenu.h  PerformEmailDispatchService.h  PostInternetAdvertService.h  Promoter.h  Role.h  RoleCommandAvailabilityRegistry.h  Service.h  ServiceFactory.h  commandsDictionary.h
src/classes/Files/: FileManager.h
src/classes/containers/: Stack.h
src/classes/exceptions/: AccountAlreadyExistException.h  NoCommandAvailabilityException.h  ServiceCreationFailedException.h  UnauthorizedException.h  UnknownCommandExceptions.h  WrongEmailException.h  WrongInputException.h  WrongLoginException.h  WrongPasswordException.h
src/classes/files/: FileManager.h
src/classes/services/: CreatePostersService.h  OrderTransportAdvert.h  PerformEmailDispatchService.h  PostInternetAdvertService.h  Service.h  ServiceFactory.h
src/classes/user/: Admin.h  Promoter.h  Role.h  RoleCommandAvailabilityRegistry.h  UserLogin.h  UserRegistry.h  commandsDictionary.h  userRegistry.h
